<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CartFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:listitem="@layout/item_cart" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cart">

        <TextView
            android:id="@+id/tv_orderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_info_24"
            android:drawablePadding="4dp"
            android:drawableTint="@color/colorPrimary"
            android:paddingBottom="4dp"
            android:text="@string/order_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_x"
            android:textColor="@color/colorGrey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_orderText"
            app:layout_constraintTop_toBottomOf="@id/tv_orderText" />

        <TextView
            android:id="@+id/tv_taxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxes_and_charges_x"
            android:textColor="@color/colorGrey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_orderText"
            app:layout_constraintTop_toBottomOf="@id/tv_subTotal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/tv_orderText"
            app:layout_constraintTop_toBottomOf="@id/tv_taxes">

            <TextView
                android:id="@+id/tv_totalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:text="@string/total"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_totalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="$200"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tv_addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="end"
                android:paddingHorizontal="20dp"
                android:textSize="18sp"
                android:paddingVertical="12dp"
                android:text="@string/check_out"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>