<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="start|center"
            android:contentDescription="@string/arrow_left"
            android:src="@drawable/baseline_keyboard_arrow_left_24"
            app:tint="@color/colorGrey" />

        <ImageView
            android:id="@+id/iv_sneaker"
            android:layout_width="wrap_content"
            android:importantForAccessibility="no"
            android:paddingHorizontal="30dp"
            android:layout_height="250dp"
            android:src="@drawable/shoes" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="end|center"
            android:contentDescription="@string/arrow_right"
            android:src="@drawable/baseline_keyboard_arrow_right_24"
            app:tint="@color/colorGrey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="end|center"
                android:contentDescription="@string/arrow_right"
                android:src="@drawable/pill_shape"
                app:tint="@color/colorGrey" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="end|center"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/arrow_right"
                android:src="@drawable/pill_shape"
                app:tint="@color/colorPrimary" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="end|center"
                android:contentDescription="@string/arrow_right"
                android:src="@drawable/pill_shape"
                app:tint="@color/colorGrey" />
        </LinearLayout>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/sneakerDetailsCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_pictures">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <TextView
                android:id="@+id/tv_sneaker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="Air Puma Nike"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/baseline_info_24"
                app:drawableTint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Air puma nike adidas"
                android:textColor="@color/colorGrey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sneaker_name" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/size_uk"
                android:textColor="@color/colorGrey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@id/tv_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_size"
                app:layout_constraintTop_toTopOf="@+id/tv_size"
                tools:listitem="@layout/item_size" />


            <TextView
                android:id="@+id/tv_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/colour"
                android:textColor="@color/colorGrey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@id/tv_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rv_size"
                app:layout_constraintTop_toTopOf="@+id/tv_color"
                tools:listitem="@layout/item_color" />

            <TextView
                android:id="@+id/tv_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/price"
                android:textColor="@color/colorGrey"
                android:paddingEnd="4dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_color" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$100"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_price_text"
                app:layout_constraintStart_toEndOf="@+id/tv_price_text"
                app:layout_constraintTop_toTopOf="@+id/tv_price_text" />

            <TextView
                android:id="@+id/tv_addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cart_selector"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_price" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>